--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@ethereumjs/tx": "^5.3.0",
     "hardhat": "^2.22.5",
     "web3": "^4.9.0"
   },
